✅📝 Update docs and fix file treatment in register controller
